remove template leftovers and fix default ref

--- a/sign-up.html
+++ b/sign-up.html
@@ -1,18 +1,13 @@
 ---
-layout: WFCdefault
+layout: default
 title: Sign Up
 description: Windsor Food Collective
 ---
-
-<h1 class="mtl">Sign Up</h1>
-
-<p>This page shows how all teh html tags renders on this thing. Taken from <a href="http://codex.wordpress.org/Theme_Unit_Test">WordPress Theme Unit Test</a></p>
-<!-- sign uP:
+<!-- sign up form:
 first name
 last name
 email address
 phone number
-phone number 2 (optional)
 suburb
 number of members in household
 username (6 alphanumeric)
