update primary colour

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,5 +1,5 @@
 ---
-layout: WFCdefault
+layout: default
 title: How It Works
 description: Windsor Food Collective
 ---
@@ -17,7 +17,7 @@ description: Windsor Food Collective
 </div>
 <div class="medium-6 columns medium-pull-6">
 <h2>How it Works</h2>
-<p>We’re a bunch of folks into eating ethical foods. In line with the permaculture ethics of Earth Care, People Care and Fair Share, we want to make ethical and healthy food (and other items) affordable and accessible to members of the community, while contributing to an alternative food system which doesn’t involve supermarkets, large food miles, fertilisers, pesticides and their associated environmental problems.</p>
+<p>We’re a bunch of folks into eating ethical foods. In line with the permaculture ethics of Earth Care, People Care and Fair Share, we want to make ethical and healthy food affordable and accessible to members of the community, while contributing to an alternative food system which doesn’t involve supermarkets, large food miles, fertilisers, pesticides and their associated environmental problems.</p>
 
 <p>Each household pre-orders a box of goodies every week.  A bulk order is made and delivered the following week.  The bulk order is packed by a team of volunteers on Wednesday afternoon 
 ready for the rest of us to pick up in the early evening. To keep prices acceptable and because we value the community aspect, everyone is a volunteer.</p>
@@ -42,7 +42,7 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 <div class="row">
 <div class="medium-9 large-7 small-centered column">
 <div class="callout secondary radius mvl">
-    <p>Got some home-grown produce to sell?  How about some seedlings or some preserves?  Not a problem!  You can list items for sale within the collective.</p>
+    <p>Got some home-grown produce to sell?  How about some seedlings or some preserves?  Great!  You can list items for sale within the collective.</p>
 </div>
 </div>
 </div>
