--- a/sign-up.html
+++ b/sign-up.html
@@ -1,4 +1,8 @@
---- layout: default title: Sign Up description: Windsor Food Collective ---
+---
+layout: default
+title: Sign Up
+description: Windsor Food Collective
+---
 <!-- sign up form:
 first name
 last name
