--- a/how-it-works.html
+++ b/how-it-works.html
@@ -4,39 +4,36 @@ title: How It Works
 description: Windsor Food Collective
 ---
 
+<h1 class="mtl text-center">How it Works</h1>
 
-<div class="callout large">
-<div class="row column text-center">
-<h1 class="mtl">Windsor Food Collective</h1>
-<p class="lead">Fresh.  Local.  Affordable.</p>
-</div>
-</div>
-<div class="row">
-<div class="medium-6 columns medium-push-6">
-<img class="thumbnail" src="vegetables-752153_1280.jpg">
-</div>
-<div class="medium-6 columns medium-pull-6">
-<h2>How it Works</h2>
-<p>We’re a bunch of folks into eating ethical foods. In line with the permaculture ethics of Earth Care, People Care and Fair Share, we want to make ethical and healthy food affordable and accessible to members of the community, while contributing to an alternative food system which doesn’t involve supermarkets, large food miles, fertilisers, pesticides and their associated environmental problems.</p>
-
-<p>Each household pre-orders a box of goodies every week.  A bulk order is made and delivered the following week.  The bulk order is packed by a team of volunteers on Wednesday afternoon 
+<div class="row column">
+<h2>The Basics</h2>
+<p>Each household pre-orders a box of groceries every week.  A bulk order is made and delivered the following week.  The bulk order is packed by a team of volunteers on Wednesday afternoon 
 ready for the rest of us to pick up in the early evening. To keep prices acceptable and because we value the community aspect, everyone is a volunteer.</p>
 </div>
-</div>
+
 <div class="row">
-<div class="medium-4 columns">
+<div class="medium-6 columns">
 <h3>Ordering</h3>
 <p>Order online weekly from 9pm Tuesday to 9am Thursday.</p>
 </div>
-<div class="medium-4 columns">
+<div class="medium-6 columns">
 <h3>Packing</h3>
 <p>Every three weeks your team packs the bulk order into individual household orders.  We meet at Northey St around 4pm and it takes about an hour to pack.</p>
 </div>
-<div class="medium-4 columns">
+</div>
+<div class="row">
+<div class="medium-6 columns">
 <h3>Collecting</h3>
 <p>Collect your order from Northey St Community Farm on Wednesday evening after 6pm.  You will receive a text message when your order is ready to be collected.</p>
 </div>
+<div class="medium-6 columns">
+<h3>Finances</h3>
+<p>Pay your invoice weekly via bank deposit.  There is a small weekly surcharge (a few dollars) which covers the costs of delivery, software and rent.</p>
 </div>
+</div>
+
+
 <div class="row">
 <div class="medium-9 large-7 small-centered column">
 <div class="callout secondary radius mvl">
@@ -44,6 +41,23 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 </div>
 </div>
 </div>
-
+<div class="row column">
+<h2>Teams</h2>
+<p>We have three teams: Membership, Finanace and Stock.  All members of the collective belong to a team.  Within the teams there are roles which we rotate through so everyone gets a chance to help out.</p>
+<div class="row">
+<div class="medium-4 columns">
+<h3>Membership</h3>
+<p>Membership handles the onboarding, departure and inner momvents of members.</p>
+</div>
+<div class="medium-4 columns">
+<h3>Finance</h3>
+<p>Pay the bills, send the invoices.</p>
+</div>
+<div class="medium-4 columns">
+<h3>Stock</h3>
+<p>Choose the stock to make available for purchase.  Process the orders with suppliers.</p>
+</div>
+</div>
+</div>
 
     
