--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@ layout: default
 title: Windsor Food Collective
 description: Windsor Food Collective
 ---
-
+<div class="callout large mtl">
+<div class="row column text-center">
 <h1 class="mtl">Windsor Food Collective</h1>
+<p class="lead">Fresh.  Local.  Affordable.</p>
+</div>
+</div>
 
-<p>We’re a buying group operating out of Northey St Community Farm.  Find out <a href="how-it-works.html">how it works</a> and then <a href="sign-up.html">sign up</a>.</p>
+<p>We are a buying group operating out of Northey St Community Farm.<p>
+
+<p>We’re all about eating ethical foods. In line with the permaculture ethics of Earth Care, People Care and Fair Share, we want to make ethical and healthy food affordable and accessible to members of the community, while contributing to an alternative food system which doesn’t involve supermarkets, large food miles, fertilisers, pesticides and their associated environmental problems.</p>
+
+<p>Find out <a href="how-it-works.html">how it works</a> and then apply to <a href="join.html">join</a>.</p>
 
