--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@ title: Windsor Food Collective
 description: Windsor Food Collective
 ---
 
-<h1 class="mtl">Windsor Food Collective</h1>
+<h1 class="mtl">Thanks</h1>
 
 <p>Thanks for signing up.  We'll be in touch shortly.</p>
 
