--- a/join.html
+++ b/join.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Sign Up
+title: Join
 description: Windsor Food Collective
 ---
 <!-- sign up form:
@@ -12,8 +12,14 @@ suburb
 number of members in household
 username (6 alphanumeric)
 -->
-<div class="medium-9 large-7 small-centered column">
-  <h1 class="mtl">Sign Up</h1>
+<div class="row">
+<div class="medium-9 large-6 column">
+<h1 class="mtl">Join</h1>
+<p>If you would like to be a part of the collective, fill in the form below and someone will be in touch with you shortly.  There is a $50 refundable deposit payable on joining.</p>
+</div>
+</div>
+<div class="medium-6 large-4 column">
+  <h2 class="mtl">Sign Up</h2>
   <form data-abide novalidate action="https://formspree.io/simonmcconnell@gmail.com" method="POST">
     <input type="hidden" name="_next" value="thanks.html" />
     <input type="hidden" name="_subject" value="New Member Sign Up!" />
@@ -85,7 +91,6 @@ username (6 alphanumeric)
           Enter the number of people in your household who will be fed from your order
         </span>
       </label>
-    </div>
     <div class="small-12 columns">
       <button class="button" type="submit" value="Send">Sign Up</button>
     </div>
