--- a/join.html
+++ b/join.html
@@ -12,14 +12,12 @@ suburb
 number of members in household
 username (6 alphanumeric)
 -->
-<div class="row">
-<div class="medium-9 large-6 column">
+<div class="row column">
 <h1 class="mtl">Join</h1>
 <p>If you would like to be a part of the collective, fill in the form below and someone will be in touch with you shortly.  There is a $50 refundable deposit payable on joining.</p>
 </div>
-</div>
 <div class="medium-6 large-4 column">
-  <h2 class="mtl">Sign Up</h2>
+  <h3 class="mtm">Sign Up</h3>
   <form data-abide novalidate action="https://formspree.io/simonmcconnell@gmail.com" method="POST">
     <input type="hidden" name="_next" value="thanks.html" />
     <input type="hidden" name="_subject" value="New Member Sign Up!" />
