--- a/join.html
+++ b/join.html
@@ -14,7 +14,7 @@ username (6 alphanumeric)
 -->
 <div class="row column">
 <h1 class="mtl">Join</h1>
-<p>If you would like to be a part of the collective, fill in the form below and someone will be in touch with you shortly.  There is a $50 refundable deposit payable on joining.</p>
+<p>If you would like to be a part of the collective, please fill in the form below and someone will be in touch with you shortly.  There is a $50 refundable deposit payable on joining.</p>
 </div>
 <div class="medium-6 large-4 column">
   <h3 class="mtm">Sign Up</h3>
