fixed spelling mistake and made intro concise

--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@ username (6 alphanumeric)
 </div>
 <div class="medium-6 large-4 column">
   <h3 class="mtm">Sign Up</h3>
-  <form data-abide novalidate action="https://formspree.io/simonmcconnell@gmail.com" method="POST">
+  <form data-abide novalidate action="https://formspree.io/windsorfoodc@gmail.com" method="POST">
     <input type="hidden" name="_next" value="thanks.html" />
     <input type="hidden" name="_subject" value="New Member Sign Up!" />
     <input type="text" name="_gotcha" style="display:none" />
