--- a/how-it-works.html
+++ b/how-it-works.html
@@ -47,7 +47,7 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 <div class="row">
 <div class="medium-4 columns">
 <h3>Membership</h3>
-<p>Membership handles the onboarding, departure and inner momvents of members.</p>
+<p>Membership handles the arrival, departure and inner movements of members.</p>
 </div>
 <div class="medium-4 columns">
 <h3>Finance</h3>
