--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Windsor Food Collective
 
 <p>We are a buying group operating out of Northey St Community Farm.<p>
 
-<p>The goal of the collective is to provide healthy and ethical foods to the community at a reasonable price. We abide by the permaculture ethics of earth care, people care and fair share.  Our actions contribute to an alternative food system that doesn’t involve supermarkets, large food miles, chemical fertilisers, pesticides and their associated environmental problems.</p>
+<p>The goal of the collective is to provide healthy and ethical foods to the community at reasonable prices. We abide by the permaculture ethics of earth care, people care and fair share.  Our actions contribute to an alternative food system that does not involve supermarkets, large food miles, chemical fertilisers, pesticides and their associated environmental problems.</p>
 
 <p>Find out <a href="how-it-works.html">how it works</a> and then apply to <a href="join.html">join</a>.</p>
 
