added image back in

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -15,7 +15,7 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 <div class="row">
 <div class="medium-6 columns">
 <h3>Ordering</h3>
-<p>Order online weekly from 9pm Tuesday to 9am Thursday.</p>
+<p>Order online weekly from 9pm Tuesday to 8am Thursday.</p>
 </div>
 <div class="medium-6 columns">
 <h3>Packing</h3>
@@ -25,7 +25,7 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 <div class="row">
 <div class="medium-6 columns">
 <h3>Collecting</h3>
-<p>Collect your order from Northey St Community Farm on Wednesday evening after 6pm.  You will receive a text message when your order is ready to be collected.</p>
+<p>Collect your order from Northey St City Farm on Wednesday evening after 6pm.  You will receive a text message when your order is ready to be collected.</p>
 </div>
 <div class="medium-6 columns">
 <h3>Finances</h3>
