--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@ description: Windsor Food Collective
 <p class="lead">Fresh.  Local.  Affordable.</p>
 </div>
 </div>
-
-<p>We are a buying group operating out of Northey St Community Farm.<p>
+<div class="row">
+<div class="medium-6 columns medium-push-6">
+<img class="thumbnail" src="images/vegetables-752153_1280.jpg">
+</div>
+<div class="medium-6 columns medium-pull-6 mvl">
+<p>We are a buying group operating out of Northey St City Farm.<p>
 
 <p>The goal of the collective is to provide healthy and ethical foods to the community at reasonable prices. We abide by the permaculture ethics of earth care, people care and fair share.  Our actions contribute to an alternative food system that does not involve supermarkets, large food miles, chemical fertilisers, pesticides and their associated environmental problems.</p>
 
 <p>Find out <a href="how-it-works.html">how it works</a> and then apply to <a href="join.html">join</a>.</p>
-
+</div>
+</div>
