--- a/join.html
+++ b/join.html
@@ -12,7 +12,7 @@ suburb
 number of members in household
 username (6 alphanumeric)
 -->
-<div class="row column">
+<div class="row medium-8 large-6 column">
 <h1 class="mtl">Join</h1>
 <p>If you would like to be a part of the collective, please fill in the form below and someone will be in touch with you shortly.  There is a $50 refundable deposit payable on joining.</p>
 </div>
