--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,17 @@
 
+---
+layout: default
+title: Contact
+description: Windsor Food Collective
+---
+
+<h1 class="mtl text-center">Contact</h1>
+
+<div class="row column">
+<p><script language="JavaScript">
+var username = "windsorfoodc";
+var hostname = "gmail.com";
+var linktext = username + "@" + hostname ;
+document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+</script></p>
+</div>
