update how it works

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -45,21 +45,24 @@ ready for the rest of us to pick up in the early evening. To keep prices accepta
 <h2>Teams</h2>
 <p>We have four teams: Membership, Finanace, Bulk and Stock.  All members of the collective belong to a team.  Within the teams there are roles which we rotate through so everyone gets a chance to help out.</p>
 <div class="row">
-<div class="medium-4 columns">
+<div class="medium-6 columns">
 <h3>Membership</h3>
 <p>Membership handles the arrival, departure and inner movements of members.</p>
 </div>
-<div class="medium-4 columns">
+<div class="medium-6 columns">
 <h3>Finance</h3>
 <p>Pay the bills, send the invoices.</p>
 </div>
-<div class="medium-4 columns">
+</div>
+<div class="row">
+<div class="medium-6 columns">
 <h3>Bulk</h3>
 <p>Handles bulk goods, eg. nuts, grains, dish soap, toilet paper, etc.</p>
 </div>
-<div class="medium-4 columns">
+<div class="medium-6 columns">
 <h3>Stock</h3>
 <p>Choose the stock to make available for purchase.  Process the orders with suppliers.</p>
+</div>
 </div>
 </div>
 </div>
